--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
     "4.0.1"
   ],
   "dependencies": {
-    "de.basisprofil.r4": "1.4.0"
-  }
+    "de.basisprofil.r4": "1.4.0",
+    "de.gematik.isik-basismodul": "2.0.0"
+  },
+
 }
