--- a/Resources/sushi-config.yaml
+++ b/Resources/sushi-config.yaml
@@ -2,8 +2,8 @@ canonical:  https://gematik.de/fhir/isik/v2/Basismodul
 fhirVersion: 4.0.1
 FSHOnly: true
 applyExtensionMetadataToRoot: false
-id: # Implementierungsleitfaden gematik-Basismodul Stufe 1 1.0.0
-name: # Implementierungsleitfaden gematik-Basismodul Stufe 1 1.0.0
+id: Implementierungsleitfaden gematik-Basismodul Stufe 1 1.0.0
+name: Implementierungsleitfaden gematik-Basismodul Stufe 1 1.0.0
 status: active
 version: # "1.0.0"
 publisher:
