--- a/package.json
+++ b/package.json
@@ -7,6 +7,13 @@
   "dependencies": {
     "de.basisprofil.r4": " 1.4.0",
     "de.gematik.isik-basismodul": "2.0.0",
-    "hl7.fhir.r4.core": " 4.0.1"
+    "hl7.fhir.r4.core": " 4.0.1",
+    "de.gematik.erezept-workflow.r4": "1.2.0",
+    "kbv.ita.erp": "1.1.0",
+    "kbv.ita.for": "1.1.0",
+    "de.gkvsv.erezeptabrechnungsdaten": "1.3.0-rc2",
+    "de.gematik.erezept-patientenrechnung.r4": "1.0.0",
+    "de.abda.eRezeptAbgabedatenPKV": "1.1.0",
+    "de.abda.eRezeptAbgabedatenBasis": "latest"
   }
 }
