--- a/Resources/sushi-config.yaml
+++ b/Resources/sushi-config.yaml
@@ -2,14 +2,15 @@ canonical:  https://gematik.de/fhir/isik/v2/Basismodul
 fhirVersion: 4.0.1
 FSHOnly: true
 applyExtensionMetadataToRoot: false
-id: Implementierungsleitfaden gematik-Basismodul Stufe 1 1.0.0
-name: Implementierungsleitfaden gematik-Basismodul Stufe 1 1.0.0
-status: active
 version: # "1.0.0"
-publisher:
-  name: Gematik GmbH
-  url: https://www.gematik.de/
-  email: info@gematik.de
+# The following entries are only relevant if FSHOnly: false (i.e. IG publisher is used), otherwise sushi throws a warning
+# id: Implementierungsleitfaden gematik-Basismodul Stufe 1 1.0.0
+# name: Implementierungsleitfaden gematik-Basismodul Stufe 1 1.0.0
+# status: active
+# publisher:
+#   name: Gematik GmbH
+#   url: https://www.gematik.de/
+#   email: info@gematik.de
 dependencies:
   de.basisprofil.r4: 1.4.0
   hl7.fhir.r4.core: 4.0.1
