--- a/.github/workflows/RenderPlantUML.yml
+++ b/.github/workflows/RenderPlantUML.yml
@@ -23,10 +23,11 @@ jobs:
       - name: Render and Move SVG files
         run: |
           # Find all unique directories containing *.puml files under any /imgsrc/ folder
-          directories=$(find . -path "*/imgsrc/*.puml" -exec dirname {} \; | sort -u)
+          directories=$(find . -path "*/imgsrc/*/*.puml" -exec dirname {} \; | sort -u)
           for dir in $directories; do
             # Generate the corresponding out directory path
-            out_dir=${ImplementationGuide/diagrams}
+            out_dir=${/ImplementationGuide/diagrams}
+            echo $out_dir
             mkdir -p $out_dir
  
             # Render SVGs from PUMLs
