--- a/.github/workflows/RenderAllDiagrams.yml
+++ b/.github/workflows/RenderAllDiagrams.yml
@@ -2,12 +2,11 @@ name: Render All Diagrams
 
 on:
   push:
-    branches: 
-    - '**'
-    paths: 
-    - 'Material/imgsrc/plantuml/**'
-    - 'Material/imgsrc/drawio/**'
+    paths:
+    - '**/Material/imgsrc/**/*.puml'
+    - '**/Material/imgsrc/**/*.drawio'
 
+  # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
 jobs:
