--- a/.github/workflows/RenderPlantUML.yml
+++ b/.github/workflows/RenderPlantUML.yml
@@ -14,12 +14,12 @@ jobs:
  
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
  
       - name: Install dependencies
         run: |
           sudo apt-get install -y graphviz
-          wget http://sourceforge.net/projects/plantuml/files/plantuml.jar/download -O plantuml.jar
+          wget -O plantuml.jar "https://github.com/plantuml/plantuml/releases/download/lastest/plantuml.jar" 
  
       - name: Render and Move SVG files
         run: |
