--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,11 +4,11 @@ name: CI (FHIR Validation)
 
 # Controls when the action will run. 
 on:
-  # Triggers the workflow on all push or pull request events but only for the main branches
+  # Triggers the workflow on push or pull request events but only for the master branch
   push:
-    branches: [ main* ]
+    branches: [ master ]
   pull_request:
-    branches: [ main* ]
+    branches: [ master ]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -38,6 +38,7 @@ jobs:
           JAVA_VALIDATION_ENABLED: true
           OUTPUT_FORMAT: RAW
           JAVA_VALIDATION_OPTIONS: -allow-example-urls true
+          JAVA_VALIDATOR_VERSION: 6.0.11
           SIMPLIFIER_USERNAME: ${{ secrets.SIMPLIFIER_USERNAME }}
           SIMPLIFIER_PASSWORD: ${{ secrets.SIMPLIFIER_PASSWORD }}
           SUSHI_ENABLED: true
@@ -45,11 +46,6 @@ jobs:
           SUSHI_OPTIONS: Resources/
           EXPECTED_FAILS: VALIDATION_CONFORMANCE_DOTNET VALIDATION_CONFORMANCE_JAVA VALIDATION_EXAMPLES_JAVA
 
-      # - name: Add & Commit
-      #  uses: EndBug/add-and-commit@v7
-      #  with:
-      #    add: 'Resources/fsh-generated/resources/'
-      
       - name: Check for Uncommitted Changes
         run: |
           git diff --exit-code 'Resources/fsh-generated/resources'|| (echo "Es gibt Änderungen durch die Pipeline. Lokale Sushi Konfiguration prüfen!" && exit 1)
