--- a/.github/workflows/RenderAllDiagrams.yml
+++ b/.github/workflows/RenderAllDiagrams.yml
@@ -77,8 +77,7 @@ jobs:
       # add and commit the new generated files
       - name: Create Pull Request
         uses: peter-evans/create-pull-request@v5
-        commit-message: |
-            Generated Images from source Code
+        commit-message: Generated Images from source Code by GitHub Action
         reviewers: ${GITHUB_ACTOR}
 
       #- name: Commit and push
