--- a/.github/workflows/RenderAllDiagrams.yml
+++ b/.github/workflows/RenderAllDiagrams.yml
@@ -77,7 +77,9 @@ jobs:
       # add and commit the new generated files
       - name: Create Pull Request
         uses: peter-evans/create-pull-request@v5
-        commit-message: Generated Images from source Code by GitHub Action
+        with:
+          commit-message: Generated Images from source Code by GitHub Action
+          reviewer: ${{ github.actor }}
       #- name: Commit and push
       #  run: |
       #    git config --local user.email "action@github.com"
