--- a/.github/workflows/RenderPlantUML.yml
+++ b/.github/workflows/RenderPlantUML.yml
@@ -45,6 +45,7 @@ jobs:
           branch: auto/images-generation
           commit-message: Generated Images from source Code by GitHub Action
           title: Generated Images from GitHub Action
+          assignees: ${{ github.actor }}
           reviewer: ${{ github.actor }}
 
       #- name: Commit and push
