--- a/.github/workflows/RenderAllDiagrams.yml
+++ b/.github/workflows/RenderAllDiagrams.yml
@@ -66,10 +66,13 @@ jobs:
       - name: Move SVGs to target image folder
         run: |
           img_dir=ImplementationGuide/images/diagrams
-          inp_dir1=./Material/imgsrc/drawio/
-          inp_dir2=./Material/imgsrc/plantuml/
-          find $inp_dir1 -name "*.svg" -exec mv {} $img_dir \;
-          find $inp_dir2 -name "*.svg" -exec mv {} $img_dir \;
+        # Find all unique directories containing *.svg files under any /imgsrc/ folder
+          FileNamePaths=$(find . -path "*/imgsrc/*/*.svg" -exec dirname {} \; | sort -u)
+          for dir in $FileNamePaths
+          do
+            # Move SVGs to out directory
+            find $dir -name "*.svg" -exec mv {} $img_dir \;
+          done
       
       # add and commit the new generated files
       - name: Create Pull Request
