--- a/.github/workflows/RenderPlantUML.yml
+++ b/.github/workflows/RenderPlantUML.yml
@@ -47,6 +47,8 @@ jobs:
           title: Generated Images from GitHub Action
           assignees: ${{ github.actor }}
           reviewers: ${{ github.actor }}
+          delete-branch: true
+          labels: automated pr
 
       #- name: Commit and push
       #  run: |
