--- a/.github/workflows/RenderPlantUML.yml
+++ b/.github/workflows/RenderPlantUML.yml
@@ -38,17 +38,17 @@ jobs:
           done
  
 
-       # add and commit the new generated files
-      - name: Create Pull Request
-        uses: peter-evans/create-pull-request@v5
-        with:
-          branch: auto/images-generation
-          commit-message: Generated Images from source Code by GitHub Action
-          title: Generated Images from GitHub Action
-          assignees: ${{ github.actor }}
-          reviewers: ${{ github.actor }}
-          delete-branch: true
-          labels: automated pr
+      # # add and commit the new generated files
+      #- name: Create Pull Request
+      #  uses: peter-evans/create-pull-request@v5
+      #  with:
+      #    branch: auto/images-generation
+      #    commit-message: Generated Images from source Code by GitHub Action
+      #    title: Generated Images from GitHub Action
+      #    assignees: ${{ github.actor }}
+      #    reviewers: ${{ github.actor }}
+      #    delete-branch: true
+      #    labels: automated pr
 
       #- name: Commit and push
       #  run: |
@@ -57,3 +57,10 @@ jobs:
       #    git add -A
       #    git commit -m "Add rendered PlantUML to SVG diagrams" || exit 0
       #    git push
+      - name: Commit rendered files
+      - uses: stefanzweifel/git-auto-commit-action@v5
+        with:
+        commit_user_name: GitHub Actions Bot
+        commit_user_email: ActionBot@github.com
+        commit_author: ${{ github.actor }}
+        commit-message: auto-generated diagrams by GitHub Action after source code change
