--- a/.github/workflows/RenderAllDiagrams.yml
+++ b/.github/workflows/RenderAllDiagrams.yml
@@ -87,11 +87,10 @@ jobs:
       #    delete-branch: true
       #    labels: automated pr
 
-    - name: Commit rendered files
-    - uses: stefanzweifel/git-auto-commit-action@v5
-      with:
-      commit_user_name: GitHub Actions Bot
-      commit_user_email: ActionBot@github.com
-      commit_author: ${{ github.actor }}
-      commit-message: auto-generated diagrams by GitHub Action after source code change
-      
+      - name: Commit rendered files
+        uses: stefanzweifel/git-auto-commit-action@v5
+        with:
+          commit_user_name: GitHub Actions Bot
+          commit_user_email: ActionBot@github.com
+          commit_author: ${{ github.actor }}
+          commit-message: auto-generated diagrams by GitHub Action after source code change
