--- a/.github/workflows/RenderPlantUML.yml
+++ b/.github/workflows/RenderPlantUML.yml
@@ -64,4 +64,4 @@ jobs:
           commit_user_name: GitHub Actions Bot
           commit_user_email: ActionBot@github.com
           commit_author: ${{ github.actor }}
-          commit-message: auto-generated diagrams by GitHub Action after source code change
+          commit_message: auto-generated diagrams by GitHub Action after source code change
