Mount local FHIR cache
By not having each devcontainer have its own FHIR cache, the required storage space is reduced and packages don't need to be re-downloaded and inflated again and again.

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -18,7 +18,10 @@
 				"codfsh.HapiValidator.Settings.SettingsFile": "/home/vscode/.fhir/settings/codfsh-config.yaml"
 			}
 		}
-	}
+	},
+	"mounts": [
+		"source=${localEnv:HOME}${localEnv:USERPROFILE}/.fhir/packages,target=/home/vscode/.fhir/packages,type=bind"
+	]
 
 	// Features to add to the dev container. More info: https://containers.dev/features.
 	// "features": {},
