--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -46,11 +46,11 @@ jobs:
           SUSHI_OPTIONS: Resources/
           EXPECTED_FAILS: VALIDATION_CONFORMANCE_DOTNET VALIDATION_CONFORMANCE_JAVA VALIDATION_EXAMPLES_JAVA
 
-      # - name: Add & Commit
-      #  uses: EndBug/add-and-commit@v7
-      #  with:
-      #    add: 'Resources/fsh-generated/resources/'
+      - name: Add & Commit
+        uses: EndBug/add-and-commit@v9
+        with:
+          add: 'Resources/fsh-generated/resources/'
       
-      - name: Check for Uncommitted Changes
-        run: |
-          git diff --exit-code 'Resources/fsh-generated/resources'|| (echo "Es gibt Änderungen durch die Pipeline. Lokale Sushi Konfiguration prüfen!" && exit 1)
+      #- name: Check for Uncommitted Changes
+      #  run: |
+      #    git diff --exit-code 'Resources/fsh-generated/resources'|| (echo "Es gibt Änderungen durch die Pipeline. Lokale Sushi Konfiguration prüfen!" && exit 1)
