--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,15 +23,8 @@ jobs:
     
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      - name: Checkout code (PR)
+      - name: Checkout code
         uses: actions/checkout@v4
-        if: github.event_name == 'pull_request'
-        with:
-          ref: ${{ github.event.pull_request.head.ref }}
-      
-      - name: Checkout code (Main)
-        uses: actions/checkout@v4
-        if: github.event_name != 'pull_request'
         
       # Java and .NET are already installed on ubuntu-latest
         
